--- a/templates/index.html
+++ b/templates/index.html
@@ -94,15 +94,15 @@
                   {% else %}
                   <img class="img-fluid" src="{% static 'img/banner/blog.png' %}" alt="">
                   {% endif %}
-                  <ul class="thumb-info">
-                    <li><a href="#"><i class="ti-user"></i>{{image.author}}</a></li>
+                  <ul class="thumb-info" style="max-width: 550px;">
+                    <li><a href="#"><i class="ti-user"></i>{{post.author}}</a></li>
                     <li><a href="#"><i class="ti-notepad"></i>{{post.published_at}}</a></li>
-                    <li><a href="#"><i class="ti-themify-favicon"></i>{{post.comments_amount}}</a></li>
+                    <li><a href="#"><i class="ti-themify-favicon"></i>{{post.comments_amount}} comments</a></li>
                   </ul>
                 </div>
                 <div class="details mt-20">
                   <h3>{{post.title}}</h3>
-                  <p>{{post.text}}</p>
+                  <p>{{post.text|truncatechars:200}}</p>
                   <a class="button" href="#">Read More <i class="ti-arrow-right"></i></a>
                 </div>
               </div>
