--- a/templates/blog-details.html
+++ b/templates/blog-details.html
@@ -67,7 +67,11 @@
         <div class="row">
           <div class="col-lg-8">
             <div class="main_blog_details">
-              <img class="img-fluid" src="{% static 'img/blog/blog4.png' %}" alt="">
+              {% if post.image_url %}
+              <img class="img-fluid" src={{post.image_url}} alt="">
+              {% else %}
+              <img class="img-fluid" src="{% static 'img/banner/blog.png' %}" alt="">
+              {% endif %}
               <h4>{{post.title}}</h4>
               <div class="user_details">
                 <div class="mt-sm-0 mt-3">
@@ -94,7 +98,7 @@
             
 
             <div class="comments-area">
-              <h4>03 Comments</h4>
+              <h4>{{post.comments|length}} Comments</h4>
               <div class="comment-list">
               {% for comment in post.comments %}
                 <div class="single-comment justify-content-between d-flex">
