--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,10 @@
-<!DOCTYPE html>
+{% extends 'base.html' %}
+{% block content %}
 {% load static %}
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Sensive Blog - Home</title>
-    <link rel="icon" href="{% static 'img/favicon.png' %}" type="image/png">
+{% block title %}
+      <title>Sensive Blog - Home</title> 
+{% endblock %}
 
-    <link rel="stylesheet" href="{% static 'styles.min.css' %}">
-  </head>
   <body>
     <!--================Header Menu Area =================-->
     <header class="header_area">
@@ -234,4 +229,4 @@
 
     <script src="{% static 'scripts.js' %}"></script>
   </body>
-</html>
+{% endblock %}
