--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="{% static 'img/favicon.png' %}" type="image/png">
 
     <link rel="stylesheet" href="{% static 'styles.min.css' %}">
+    <script src="{% static 'scripts.js' %}"></script>
   </head>
   <body>
     {% block content %}
