--- a/templates/blog-details.html
+++ b/templates/blog-details.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
 {% block title %}
-      <title>{{post.title}} - blog details</title>
+      <title>{{post.title}}</title>
 {% endblock %}
   <body>
     <!--================Header Menu Area =================-->
@@ -211,7 +211,5 @@
       </div>
     </footer>
     <!--================ End Footer Area =================-->
-
-    <script src="{% static 'scripts.js' %}"></script>
   </body>
 {% endblock %}
