Изменил названия страниц

--- a/templates/blog-details.html
+++ b/templates/blog-details.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
 {% block title %}
-      <title>{{post.title}}</title>
+      <title>{{post.title}} - Blog Details</title>
 {% endblock %}
   <body>
     <!--================ Hero sm Banner start =================-->      
