--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
 {% block title %}
-      <title>Remake Barber - Contact</title>
+      <title>Sensive Blog - Contact</title>
 {% endblock %}
   <body>
     <!--================ Hero sm banner start =================-->  
