--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
             <div class="flex-fill" style="margin-right: 30px;">
               <div class="card blog__slide text-center">
                 <div class="blog__slide__img">
-                  <img class="card-img rounded-0" src={{post.image_url}} alt="">
+                  <img class="card-img rounded-0" src={{post.image_url}} alt="Post image">
                 </div>
                 <div class="blog__slide__content">
                   <h3><a href="http://127.0.0.1:8000/post/{{post.slug}}">{{post.title}}</a></h3>
