--- a/templates/base.html
+++ b/templates/base.html
@@ -39,8 +39,11 @@
         </nav>
       </div>
     </header>
-    {% block content %}
-    {% endblock %}
+    <body>
+      {% block content %}
+
+      {% endblock %}
+    </body>
     <footer class="footer-area section-padding">
       <div class="container">
         <div class="row">
