--- a/templates/blog-details.html
+++ b/templates/blog-details.html
@@ -4,7 +4,7 @@
   {% block title %}
     <title>{{post.title}} - Blog Details</title>
   {% endblock %}
-  <!--================ Hero sm Banner start =================-->      
+  <!--================ Hero sm Banner start =================-->
   <section class="mb-30px">
     <div class="container">
       <div class="hero-banner hero-banner--sm">
@@ -20,8 +20,8 @@
       </div>
     </div>
   </section>
-  <!--================ Hero sm Banner end =================-->    
-  
+  <!--================ Hero sm Banner end =================-->
+
 
   <!--================ Start Blog Post Area =================-->
   <section class="blog-post-area section-margin">
@@ -29,11 +29,11 @@
       <div class="row">
         <div class="col-lg-8">
           <div class="main_blog_details">
-              {% if post.image_url %}
-                <img class="img-fluid" src={{post.image_url}} alt="Post photo">
-              {% else %}
-                <img class="img-fluid" src="{% static 'img/banner/blog.png' %}" alt="If there is no post photo">
-              {% endif %}
+            {% if post.image_url %}
+              <img class="img-fluid" src={{post.image_url}} alt="Post photo">
+            {% else %}
+              <img class="img-fluid" src="{% static 'img/banner/blog.png' %}" alt="If there is no post photo">
+            {% endif %}
             <h4>{{post.title}}</h4>
             <div class="user_details">
               <div class="mt-sm-0 mt-3">
@@ -47,8 +47,10 @@
             </div>
             <p>{{post.text}}</p>
             <div class="news_d_footer flex-column flex-sm-row">
-              <a href="#"><span class="align-middle mr-2"><i class="ti-heart" style="color:red"></i></span>{{post.likes_amount}}</a>
-              <a class="justify-content-sm-center ml-sm-auto mt-sm-0 mt-2" href="#"><span class="align-middle mr-2"><i class="ti-themify-favicon"></i></span>03 Comments</a>
+              <a href="#"><span class="align-middle mr-2"><i class="ti-heart"
+                    style="color:red"></i></span>{{post.likes_amount}}</a>
+              <a class="justify-content-sm-center ml-sm-auto mt-sm-0 mt-2" href="#"><span class="align-middle mr-2"><i
+                    class="ti-themify-favicon"></i></span>03 Comments</a>
               <div class="news_socail ml-sm-auto mt-sm-0 mt-2">
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
@@ -57,7 +59,7 @@
               </div>
             </div>
           </div>
-          
+
 
           <div class="comments-area">
             <h4>{{post.comments|length}} Comments</h4>
@@ -69,16 +71,16 @@
                       <h5><a href="#">{{comment.author}}</a></h5>
                       <p class="date">{{comment.published_at}}</p>
                       <p class="comment">
-                          {{comment.text}}
+                        {{comment.text}}
                       </p>
                     </div>
                   </div>
                   <div class="reply-btn">
-                          <a href="" class="btn-reply text-uppercase">reply</a> 
+                    <a href="" class="btn-reply text-uppercase">reply</a>
                   </div>
                 </div>
               {% endfor %}
-            </div>                                          				
+            </div>
           </div>
         </div>
 
@@ -90,8 +92,8 @@
               <h4 class="single-sidebar-widget__title">Newsletter</h4>
               <div class="form-group mt-30">
                 <div class="col-autos">
-                  <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Enter email" onfocus="this.placeholder = ''"
-                    onblur="this.placeholder = 'Enter email'">
+                  <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Enter email"
+                    onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter email'">
                 </div>
               </div>
               <button class="bbtns d-block mt-20 w-100">Subcribe</button>
@@ -108,4 +110,4 @@
     </div>
   </section>
   <!--================ End Blog Post Area =================-->
-{% endblock %}
+  {% endblock %}
