add some spaces

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% load static %}
+
+{% block title %}<title>Sensive Blog - Contact</title>{% endblock %}
+
 {% block content %}
-  {% block title %}
-    <title>Sensive Blog - Contact</title>
-  {% endblock %}
   <!--================ Hero sm banner start =================-->  
   <section class="mb-30px">
     <div class="container">
