--- a/templates/blog-details.html
+++ b/templates/blog-details.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% load static %}
+
+{% block title %}<title>{{post.title}} - Blog Details</title>{% endblock %}
+
 {% block content %}
-  {% block title %}
-    <title>{{post.title}} - Blog Details</title>
-  {% endblock %}
   <!--================ Hero sm Banner start =================-->
   <section class="mb-30px">
     <div class="container">
@@ -110,4 +110,4 @@
     </div>
   </section>
   <!--================ End Blog Post Area =================-->
-  {% endblock %}
+{% endblock %}
